[package]
name = "nucleo-144-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread", "task-arena-size-65536"] }
embassy-net = { version = "0.7.0", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-stm32 = { version = "0.2.0", features = ["defmt", "exti", "memory-x", "stm32h563zi", "time-driver-any"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-io-async = "0.6.1"
heapless = { version = "0.8.0", default-features = false}
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
opt-level = "z"
overflow-checks = false
